--- a/src/App.css
+++ b/src/App.css
@@ -182,7 +182,7 @@ background: linear-gradient(to bottom left, #1da1f2, #6253e8); */
   }
 }
 
-.header {
+.shape{
   /* padding: 0 5%;
   margin-top: -1%; */
   border-top-left-radius: 100px;
