--- a/src/index.css
+++ b/src/index.css
@@ -20,4 +20,26 @@ body{
       @apply text-green-500 font-bold py-4 mb-4 text-3xl border-b-4 inline;
     }
   }
-  
+.slick-slide > div{
+    margin: 0 10px;
+}
+@media (min-width: 768px) {
+  .projects {
+    width: 70%;
+    margin: 0;
+  }
+}
+
+@media (min-width: 600px) and (max-width: 767px) {
+  .projects {
+    width: 75%;
+    margin: 0;
+  }
+}
+
+@media (max-width: 599px) {
+  .projects {
+    width: 100%;
+    margin: 0;
+  }
+}
