--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -142,7 +142,7 @@ body{
 }
 
 .dark.header {
-  background: linear-gradient(to bottom left, #18163c 0%, #222222 40%, #121212 60%, #000000 100%);
+  background: linear-gradient(to left, gray 0%, gray 40%, #000000 60%, #000000 80%, #000000 100%);
   color: #f5f5f5;
   transition: all 1s;
 }
