--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -12,18 +12,39 @@
 
   /* Add these styles to your CSS file */
   @keyframes borderRadiusAnimation {
-    0% {
+    0%, 100% {
       border-radius: 50% 50% 50% 50%;
+    }
+  
+    12.5% {
+      border-radius: 50% 75% 50% 50%;
+    }
+  
+    25% {
+      border-radius: 50% 100% 50% 50%;
+    }
+  
+    37.5% {
+      border-radius: 50% 100% 75% 50%;
     }
   
     50% {
-      border-radius: 0% 100% 50% 50%;
+      border-radius: 50% 50% 100% 50%;
     }
   
-    100% {
-      border-radius: 50% 50% 50% 50%;
+    62.5% {
+      border-radius: 50% 50% 100% 75%;
     }
-  }  
+  
+    75% {
+      border-radius: 50% 50% 50% 100%;
+    }
+  
+    87.5% {
+      border-radius: 50% 50% 75% 100%;
+    }
+  }
+   
   
   /* Apply the animation to your image */
   .image-animation  {
