--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -194,5 +194,48 @@ background: linear-gradient(to bottom left, #1da1f2, #6253e8); */
     color: transparent;
   }
 
+.text-flicker-in-glow{
+  animation: text-flicker-in-glow 10s steps(2) infinite both;
+}
 
-
+@keyframes text-flicker-in-glow {
+  0% {
+    opacity: 0;
+  }
+  10%, 20%, 30%, 45%, 57%, 65%, 75%, 86% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  10.1%, 30.1%, 60.1%, 77.1%, 85.1%, 86.1%, 100% {
+    opacity: 1;
+    text-shadow: none;
+  }
+  10.2%, 20.6%, 30.2%, 60.2%, 65.1%, 75.1%, 86.2% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  20.1%, 30.5%, 50%, 55%, 55.1%, 60%, 65.1%, 75%, 77.1%, 85%, 86.1% {
+    opacity: 1;
+    text-shadow: 0 0 30px hsla(0, 0%, 100%, 0.45), 0 0 60px hsla(0, 0%, 100%, 0.25);
+  }
+  57% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  60.1%, 65%, 75.1% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  60.1%, 65.1%, 75%, 86% {
+    opacity: 1;
+    text-shadow: 0 0 30px hsla(0, 0%, 100%, 0.55), 0 0 60px hsla(0, 0%, 100%, 0.35);
+  }
+  77.1%, 86.1% {
+    opacity: 1;
+    text-shadow: 0 0 30px hsla(0, 0%, 100%, 0.55), 0 0 60px hsla(0, 0%, 100%, 0.4), 0 0 110px hsla(0, 0%, 100%, 0.2), 0 0 100px hsla(0, 0%, 100%, 0.1);
+  }
+  85.1% {
+    opacity: 0;
+    text-shadow: none;
+  }
+}
