--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,3 +1,51 @@
+/* Add these styles to your Name in the Header*/
+.text-flicker-in-glow{
+  animation: text-flicker-in-glow 10s steps(2) infinite both;
+}
+
+@keyframes text-flicker-in-glow {
+  0% {
+    opacity: 1;
+  }
+  10%, 20%, 30%, 45%, 57%, 65%, 75%, 86% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  10.1%, 30.1%, 60.1%, 77.1%, 85.1%, 86.1%, 100% {
+    opacity: 1;
+    text-shadow: none;
+  }
+  10.2%, 20.6%, 30.2%, 60.2%, 65.1%, 75.1%, 86.2% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  20.1%, 30.5%, 50%, 55%, 55.1%, 60%, 65.1%, 75%, 77.1%, 85%, 86.1% {
+    opacity: 1;
+    text-shadow: 0 0 30px hsla(0, 0%, 100%, 0.45), 0 0 60px hsla(0, 0%, 100%, 0.25);
+  }
+  57% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  60.1%, 65%, 75.1% {
+    opacity: 0;
+    text-shadow: none;
+  }
+  60.1%, 65.1%, 75%, 86% {
+    opacity: 1;
+    text-shadow: 0 0 30px hsla(0, 0%, 100%, 0.55), 0 0 60px hsla(0, 0%, 100%, 0.35);
+  }
+  77.1%, 86.1% {
+    opacity: 1;
+    text-shadow: 0 0 30px hsla(0, 0%, 100%, 0.55), 0 0 60px hsla(0, 0%, 100%, 0.4), 0 0 110px hsla(0, 0%, 100%, 0.2), 0 0 100px hsla(0, 0%, 100%, 0.1);
+  }
+  85.1% {
+    opacity: 0;
+    text-shadow: none;
+  }
+}
+
+/* Add these styles to Navbar when its beyond the md breakpoint */
 @media (min-width: 992px) {
     .md-shape {
       /* padding: 0 5%;
@@ -8,9 +56,12 @@
       border-bottom-right-radius: 100px;
     }
   }
-  
 
-  /* Add these styles to your CSS file */
+/* Add these styles to your Profile Photo */    
+.image-animation  {
+    animation: borderRadiusAnimation 15s infinite; /* Change the duration as needed */
+}
+
   @keyframes borderRadiusAnimation {
     0%, 100% {
       border-radius: 50% 50% 50% 50%;
@@ -45,9 +96,4 @@
     }
   }
    
-  
-  /* Apply the animation to your image */
-  .image-animation  {
-    animation: borderRadiusAnimation 15s infinite; /* Change the duration as needed */
-  }
   
