Fixed font size

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,7 +15,7 @@
         font-family: "Merienda";
     }
     h2 {
-      @apply text-green-500 font-bold py-4 mb-4 text-3xl border-b-4 inline;
+      @apply text-green-500 font-bold py-4 mb-4 text-3xl border-b-4 border-luminous inline;
     }
   }
 
