--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Shojumaru&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merienda:wght@500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Qanelas+Soft:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
 
 .slick-slide > div{
     margin: 0 10px;
@@ -13,6 +15,7 @@
 @layer base {   
     body{
         font-family: "Merienda";
+        /* font-family: 'Qanelas Soft', 'Open Sans', sans-serif; */
     }
     h2 {
       @apply text-green-500 font-bold py-4 mb-4 text-3xl border-b-4 border-luminous inline;
