--- a/src/styles/techskill.css
+++ b/src/styles/techskill.css
@@ -67,3 +67,16 @@
 .light .contact{
     background: linear-gradient(135deg, rgba(253, 253, 253, 0.18) 0.01%, rgba(243, 243, 243, 0.00) 100%);
 }
+
+@media (min-width: 1536px) {
+	/* .responsiveGridAreaClass {
+	  grid-template: repeat(5, 1fr)/ repeat(5, 1fr) ;
+	  grid-area: 
+	  '3 / 1/ 4 / 2'
+	  '2 / 2 / 3 / 3'
+	  '1/ 3 / 6 / 4' 
+	   '2 / 4 / 3 / 5'
+	   '3 / 5 / 4 / 6';
+	  grid-template-areas: '2 / 1 / 4 / 5' '1 / 2 / 5 / 4';
+	} */
+  }
