Added Loader component

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -8,6 +8,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Qanelas+Soft:wght@300;400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap');
+/* Good font: Mouse Memoirs */
 
 .slick-slide > div{
     margin: 0 10px;
