--- a/src/styles/social.css
+++ b/src/styles/social.css
@@ -11,8 +11,8 @@
 .socials:before{
     content: "";
     position: absolute;
-    height: 100%;
-    width: 20px;
+    /* height: 100%; */
+    /* width: 20px; */
     background: #18163c;
     top: 10px;
     left: -20px;
@@ -21,8 +21,8 @@
 .socials:after{
     content: "";
     position: absolute;
-    height: 20px;
-    width: 100%;
+    /* height: 20px; */
+    /* width: 100%; */
     background: #18163c;
     bottom: -20px;
     left: -10px;
