--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Monoton&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik+Vinyl&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Berkshire+Swash&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Aboreto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Wallpoet&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Nova+Cut&display=swap");
 
 /* Good font: Mouse Memoirs */
 
@@ -41,6 +46,31 @@
     }
     .rubik-vinyl-regular {
         font-family: "Rubik Vinyl", system-ui;
+        font-weight: 400;
+        font-style: normal;
+    }
+    .protest-guerrilla-regular {
+        font-family: "Protest Guerrilla", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+    .berkshire-swash-regular {
+        font-family: "Berkshire Swash", serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+    .aboreto-regular {
+        font-family: "Aboreto", system-ui;
+        font-weight: 400;
+        font-style: normal;
+    }
+    .wallpoet-regular {
+        font-family: "Wallpoet", sans-serif;
+        font-weight: 400;
+        font-style: normal;
+    }
+    .nova-cut-regular {
+        font-family: "Nova Cut", system-ui;
         font-weight: 400;
         font-style: normal;
     }
