--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -23,7 +23,8 @@
 }
 @layer base {
     body {
-        font-family: "Merienda";
+        font-family: "Aboreto", system-ui;
+        font-weight: 900;
         /* font-family: 'Qanelas Soft', 'Open Sans', sans-serif; */
     }
     h2 {
@@ -35,7 +36,12 @@
     .Shojumaru {
         font-family: "Shojumaru";
     }
-
+    .merienda-class {
+        font-family: "Merienda", cursive;
+        font-optical-sizing: auto;
+        font-weight: 500;
+        font-style: normal;
+    }
     .Montserrat {
         font-family: "Montserrat Alternates";
     }
