--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -46,8 +46,9 @@
   }
 }
 .header{
-  box-shadow: rgba(0, 179, 159, 0.2) 0px 10px 25px;
+  box-shadow: 0 0 20px rgba(0, 179, 159, 0.5), 0 0 40px rgba(0, 179, 159, 0.4), 0 0 60px rgba(0, 179, 159, 0.3);
 }
+
 /* Add these styles to Navbar when its beyond the md breakpoint */
 @media (min-width: 992px) {
     .md-shape {
